# SightTune_NewsLetter_LangGraph

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: check_approval.yml  ci.yml  newsletter.yml
data/: signup_automation.gs
logs/: history.jsonl  newsletter_2026-04-09.html
src/: agent.py  approval.py  email_template.py  mailer.py  run.py  run_send.py  state.py  subscribers.py  tools.py
tests/: test_approval.py  test_nodes.py  test_routing.py
