[project]
name = "sighttune-newsletter-bot"
version = "0.1.0"
description = "Monthly newsletter agent for SightTune Music Technology"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
newsletter = "src.run:main"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
pythonpath = ["."]
